Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,16 @@
   --mb-each-component: 100px;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--primary-font);
   margin: 0;
   padding: 0;
   background: var(--secondary);
   color: var(--primary);
-  overflow-x: hidden;
 }
 
 .components>* {
